Fix DDBNEXT-689 Shift and revise widget for sorting favorites chronologicaly

--- a/web-app/css/favorites.css
+++ b/web-app/css/favorites.css
@@ -452,3 +452,6 @@ hr {
   display:block;
   margin-bottom: -10px;
 }
+.orderList{
+	margin:10px 0 10px 3px;
+}
